<?xml version="1.0" encoding="utf-8"?>

<!DOCTYPE resources [
    <!ENTITY TERMUX_PACKAGE_NAME "com.termux">
    <!ENTITY TERMUX_APP_NAME "Termux">
    <!ENTITY TERMUX_TASKER_APP_NAME "Termux:Tasker">
    <!ENTITY TERMUX_PREFIX_DIR_PATH "/data/data/com.termux/files/usr">
    <!ENTITY TERMUX_TASKER_SCRIPTS_DIR_PATH_SHORT "~/.termux/tasker">
    <!ENTITY TERMUX_PROPERTIES_PRIMARY_PATH_SHORT "~/.termux/termux.properties">
    ]>

<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- The app_name is the name of the app that is visible when listing installed apps.
         It's also used by plugin caller app as plugin name like in Tasker in "Select Action Category" > "Plugin" dialog, so keep this one short -->
    <string name="application_name">&TERMUX_TASKER_APP_NAME;</string>
    <string name="shared_user_label">&TERMUX_APP_NAME; user</string>
    <string name="plugin_info">&TERMUX_TASKER_APP_NAME; is a plugin app for the &TERMUX_APP_NAME; app
        that allows &TERMUX_APP_NAME; commands to be executed from Tasker and other plugin host apps.
        Check &TERMUX_APP_NAME; app github %1$s and &TERMUX_TASKER_APP_NAME; app github %2$s for more info.</string>
    <string name="plugin_api_help">Visit %1$s for more info on plugin usage.</string>

    <!-- TermuxTaskerMainActivity -->
    <string name="msg_change_launcher_activity_state_info">The &TERMUX_TASKER_APP_NAME; app does not
        require a require launcher activity/icon to function. You can optionally disable the launcher
        activity if you want and enable it again from the main activity if required.
        \n\nThe launcher activity is an alias for the current main activity of the app which can
        still be opened after disabling the launcher activity. The main activity can be opened
        from `&TERMUX_APP_NAME; app settings` -> `&TERMUX_TASKER_APP_NAME;` -> `Open App` if the
        option has been implemented in your installed &TERMUX_APP_NAME; app version. Otherwise,
        running the `am start "%1$s/%2$s"` command in the &TERMUX_APP_NAME; app should open it.
        \n\nNote that on some devices the APIs may not function properly if the launcher activity is
        disabled.</string>



    <!-- The plugin name as shown in plugin caller app in the Task Edit activity.-->
    <string name="plugin_name">&TERMUX_APP_NAME;</string>
    <string name="title_executable_path">Executable (file in &TERMUX_TASKER_SCRIPTS_DIR_PATH_SHORT; or absolute path to executable)</string>
    <string name="title_arguments">Arguments</string>
    <string name="title_working_directory_path">Working directory path</string>
    <string name="title_stdin">Stdin</string>
    <string name="title_session_action">Terminal Session Action</string>
    <string name="title_background_custom_log_level">Custom Log Level</string>
    <string name="title_execute_in_terminal">Execute in a terminal session</string>
    <string name="title_wait_for_result">Wait for result for commands (Requires timeout > 0)</string>

    <string name="msg_executable_absolute_path">Executable Absolute Path:\n\"%1$s\"</string>
    <string name="msg_absolute_path">Absolute Path:\n\"%1$s\"</string>

    <string name="error_executable_required">Executable required.</string>
    <string name="error_null_or_empty_executable">The executable is null or empty.</string>
    <string name="error_int_not_in_range">Value must be in between %1$d and %2$d.</string>

    <string name="error_unknown_app">(unknown)</string>
    <string name="error_null_bundle">The bundle is null.</string>
    <string name="msg_variable_in_string">(variable detected)</string>

    <string name="error_plugin_permission_ungranted_warning">The %1$s App (%2$s) has not been granted the \"%3$s\" permission which is required to run the plugin action."</string>
    <string name="error_allow_external_apps_ungranted_warning">Absolute paths for executables outside &TERMUX_TASKER_SCRIPTS_DIR_PATH_SHORT; directory require allow-external-apps property to be set to \"true\" in &TERMUX_PROPERTIES_PRIMARY_PATH_SHORT; file.</string>
    <string name="error_generate_plugin_bundle_failed">Failed to generate plugin bundle</string>
    <string name="error_get_version_code_failed">Failed to get version code for %1$s</string>

    <string name="blurb_executable_and_arguments">%1$s%2$s</string>
    <string name="blurb_working_directory">Working Directory %1$s</string>
    <string name="blurb_stdin">Stdin %1$s</string>
    <string name="blurb_custom_log_level">Custom Log Level %1$s</string>
    <string name="blurb_session_action">Session Action %1$s</string>
    <string name="blurb_in_terminal">Terminal Session %1$s</string>
    <string name="blurb_wait_for_result">Wait For Result %1$s</string>

    <!-- From Locale API: -->
    <string name="twofortyfouram_locale_breadcrumb_format" tools:ignore="UnusedResources">%1$s%2$s%3$s</string>
    <string name="twofortyfouram_locale_breadcrumb_separator" tools:ignore="UnusedResources">\u0020&gt;\u0020</string>
    <string name="twofortyfouram_locale_menu_dontsave">Cancel</string>
    <string name="twofortyfouram_locale_menu_save">Done</string>
</resources>
