<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/partial_primary_toolbar"
        android:id="@+id/partial_primary_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_view_padding"
            tools:context=".EditConfigurationActivity">

            <TextView
                android:id="@+id/termux_app_files_path_inaccessible_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="start|center_vertical"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/red_error"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/plugin_permission_ungranted_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="start|center_vertical"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/red_error"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/allow_external_apps_ungranted_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="start|center_vertical"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/red_error"
                android:visibility="invisible" />



            <!-- Executable -->
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_view_padding_mini"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/title_executable_path"
                        tools:labelFor="@id/executable_path" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_executable_path"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:errorTextColor="@color/red_error"
                        app:errorIconTint="@color/red_error"
                        app:boxStrokeErrorColor="@color/red_error">
                        <AutoCompleteTextView
                            android:id="@+id/executable_path"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:completionThreshold="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/executable_absolute_path"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|top"
                        android:textSize="12sp"
                        android:textStyle="normal" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <!-- Arguments -->
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_view_padding_mini"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/title_arguments"
                        tools:labelFor="@id/arguments" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_arguments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:errorTextColor="@color/red_error"
                        app:errorIconTint="@color/red_error"
                        app:boxStrokeErrorColor="@color/red_error">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/arguments"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:importantForAutofill="no" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <!-- Working Directory -->
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_view_padding_mini"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/title_working_directory_path"
                        tools:labelFor="@id/working_directory_path" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_working_directory_path"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:errorTextColor="@color/red_error"
                        app:errorIconTint="@color/red_error"
                        app:boxStrokeErrorColor="@color/red_error">
                        <AutoCompleteTextView
                            android:id="@+id/working_directory_path"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:completionThreshold="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/working_directory_absolute_path"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|top"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:visibility="invisible" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <!-- Stdin -->
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_view_padding_mini"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/title_stdin" />

                    <TextView
                        android:id="@+id/view_stdin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|top"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:lines="3" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>



            <!-- Session Action -->
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_view_padding_mini"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/title_session_action"
                        tools:labelFor="@id/session_action" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_session_action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:errorTextColor="@color/red_error"
                        app:errorIconTint="@color/red_error"
                        app:boxStrokeErrorColor="@color/red_error">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/session_action"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:inputType="text"
                            android:importantForAutofill="no" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>





            <!-- Background Custom Log Level -->
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_view_padding_mini"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/title_background_custom_log_level"
                        tools:labelFor="@id/background_custom_log_level" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_background_custom_log_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:errorTextColor="@color/red_error"
                        app:errorIconTint="@color/red_error"
                        app:boxStrokeErrorColor="@color/red_error">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/background_custom_log_level"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:inputType="text"
                            android:importantForAutofill="no" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>





            <CheckBox
                android:id="@+id/in_terminal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/title_execute_in_terminal" />

            <CheckBox
                android:id="@+id/wait_for_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin_mini"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/title_wait_for_result" />



            <TextView
                android:id="@+id/textview_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="start|center_vertical"
                android:textSize="14sp"
                android:textStyle="normal"
                android:autoLink="web" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
